@startuml Klassendiagram

interface ATMListener
interface KeypadListener

class Main {
  {static} +main(String[])
}
class ATM implements ATMListener
class BankDatabase
class Account 
class Keypad 
class CashDispenser
class Screen implements KeypadListener
class SidePanel 
class AdminView 

Main --> ATM
ATM o-- BankDatabase
ATM *-- Screen
ATM o-- AdminView
BankDatabase o-- Account
BankDatabase o-- CashDispenser
Screen *-- Keypad
Screen *-- SidePanel

' class InvalidModeException extends Exception
' class InvalidTransactionException extends Exception
' class LoginFailedException extends Exception


@enduml
